UPD. update test case amd swagger
